# open-cpp-utils

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  any.h  array.h  directed_tree.h  dynarray.h  filesystem.h  hash_table.h  map.h  math.h  object_pool.h  ocpputils.natvis  optional.h  redec.h  set.h  startup.h  template_utils.h  types.h  unique_id.h  vcpkg.json
Documentation/html/: annotated.html  any_8h_source.html  array_8h_source.html  classes.html  classopen__cpp__utils_1_1any.html  classopen__cpp__utils_1_1any_3_01_t_00_01_rest_8_8_8_01_4-members.html  classopen__cpp__utils_1_1any_3_01_t_00_01_rest_8_8_8_01_4.html  classopen__cpp__utils_1_1any_3_4.html  classopen__cpp__utils_1_1directed__tree-members.html  classopen__cpp__utils_1_1directed__tree.html  classopen__cpp__utils_1_1directed__tree_1_1breadth__first-members.html  classopen__cpp__utils_1_1directed__tree_1_1breadth__first.html  classopen__cpp__utils_1_1directed__tree_1_1in__order-members.html  classopen__cpp__utils_1_1directed__tree_1_1in__order.html  classopen__cpp__utils_1_1directed__tree_1_1post__order-members.html  classopen__cpp__utils_1_1directed__tree_1_1post__order.html  classopen__cpp__utils_1_1directed__tree_1_1pre__order-members.html  classopen__cpp__utils_1_1directed__tree_1_1pre__order.html  classopen__cpp__utils_1_1directed__tree_1_1traverser-members.html  classopen__cpp__utils_1_1directed__tree_1_1traverser.html  classopen__cpp__utils_1_1dyn__array.html  classopen__cpp__utils_1_1optional-members.html  classopen__cpp__utils_1_1optional.html  directed__tree_8h_source.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  md__r_e_a_d_m_e.html  optional_8h_source.html  pages.html  startup_8h_source.html  structopen__cpp__utils_1_1constant__value-members.html  structopen__cpp__utils_1_1constant__value.html  structopen__cpp__utils_1_1fixed__array.html  structopen__cpp__utils_1_1fixed__array_3_01_t_00_01_n_01_4-members.html  structopen__cpp__utils_1_1fixed__array_3_01_t_00_01_n_01_4.html  template__utils_8h.html  (+3 more)
Documentation/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  (+16 more)
Documentation/latex/: annotated.tex  any_8h_source.tex  array_8h_source.tex  classopen__cpp__utils_1_1any.tex  classopen__cpp__utils_1_1any_3_01_t_00_01_rest_8_8_8_01_4.eps  classopen__cpp__utils_1_1any_3_01_t_00_01_rest_8_8_8_01_4.tex  classopen__cpp__utils_1_1any_3_4.tex  classopen__cpp__utils_1_1directed__tree.tex  classopen__cpp__utils_1_1directed__tree_1_1breadth__first.tex  classopen__cpp__utils_1_1directed__tree_1_1in__order.tex  classopen__cpp__utils_1_1directed__tree_1_1post__order.tex  classopen__cpp__utils_1_1directed__tree_1_1pre__order.tex  classopen__cpp__utils_1_1directed__tree_1_1traverser.tex  classopen__cpp__utils_1_1dyn__array.tex  classopen__cpp__utils_1_1optional.tex  directed__tree_8h_source.tex  files.tex  hierarchy.tex  md__r_e_a_d_m_e.tex  optional_8h_source.tex  refman.tex  startup_8h_source.tex  structopen__cpp__utils_1_1constant__value.tex  structopen__cpp__utils_1_1fixed__array.tex  structopen__cpp__utils_1_1fixed__array_3_01_t_00_01_n_01_4.tex  template__utils_8h.tex  template__utils_8h_source.tex  types_8h_source.tex  unique__id_8h_source.tex
Test/: Test.cpp
